[package]
name = "osm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = {version = "2.6.0", features = ["https", "urlencoding", "json-using-serde"]}
anyhow = "1.0.57"
thiserror = "1.0.30"
strum = "0.24.0"
strum_macros = "0.24.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_with = "1.12.1"
chrono = {version = "0.4.19", features = ["serde"]}
